fixed overflow issue

--- a/Client/src/styles/pages/global-rules.scss
+++ b/Client/src/styles/pages/global-rules.scss
@@ -19,6 +19,7 @@
     rgba(0, 0, 0, 0.85) 95%,
     rgba(0, 0, 0, 0.8) 100%
   );
+  overflow-x: hidden;
 }
 html {
   scroll-behavior: smooth;
